Add markup and text

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,195 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Chto 2020</title>
 </head>
 <body>
-    <img src="./img/site_01.jpg" alt="site">
+    <header>
+        <nav class="navigation">
+            <img src="./img/logo.svg" alt="Логотип Что" class="navigation__logo">
+            <ul class="sections">
+                <li class="sections__item">Где и когда</li>
+                <li class="sections__item">Билеты</li>
+                <li class="sections__item">Трансфер</li>
+                <li class="sections__item">Правила</li>
+                <li class="sections__item">Мерч</li>
+                <li class="sections__item">Контакты</li>
+            </ul>
+        </nav>
+        <h1>Что . Soundscape performance</h1>
+        <p>Вечеринка для интровертов с соблюдением социальной дистанции</p>
+        <p>Ambient open air</p>
+    </header>
+    <div class="hero">
+        <img src="./img/hero.jpg" alt="Фото пустыни" class="hero__image">
+    </div>
+    <main>
+        <section class="description">
+            <p class="description__main-text">
+                Что — это серия уникальных акустических мероприятий на стыке перформанса, саунд-арта, аудио-экспозиции, музыкального оупенэйра и туризма, проходящая на больших природных ландшафтах, где можно услышать переплетения эмбиента с музыкой эпохи ренессанса, индустриальных шумов с каноничными хоралами, дроуна с авангардом двадцатого века, различной экспериментальной, народной, академической и электронной музыкой.
+            </p>
+            <p class="description__secondary-text">
+                Главным действующим элементом на ЧТО выступает пространство между источниками звука и слушателями: оно непривычно велико для музыкальных событий: 300-400 метров минимум и более километра в идеале. В нём музыка насыщается воздухом и приобретает новые качества, отличные от изначальных, становится буквально осязаема.
+            </p>
+            <img src="./img/description__map.jpg" alt="Карта распространения звука" class="description__map">
+            <p class="description__secondary-text">
+                Находясь в отдалении, слушатель воспринимает звук как огромную движущуюся масу вокруг него. Вся музыка на ЧТО демонстрируется через призму эмбиента. "Ambient" — с английского "окружающий". Я предлагаю посетителю окунуться в эту атмосферу, а не просто слушать её — оказаться в этом окружении, стать его частью. "ЧТО — это как будто ты начал слушать CD, а сам уже где-то на обложке, внутри звука. Портал без портала."
+            </p>
+            <a href="#" class="description__info-link">
+                Подробнее о проекте
+            </a>
+        </section>
+        <section class="reviews">
+            <h2 class="reviews__heading">
+                Отзывы
+            </h2>
+            <p class="reviews__text">
+                Текст отзыва
+            </p>
+        </section>
+        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/t1J_xpBX-FI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        <section class="location">
+            <p class="location__text">
+                <strong>Место:</strong> песчаная пустыня Большие Быковские Буруны. 49.879333, 41.420388.
+            </p>
+            <p class="location__text">
+                <strong>Время:</strong> 1 августа 2020, 18:00.
+            </p>
+            <p class="location__disclaimer">
+                (дата может быть перенесена в связи с неподходящей погодой или иными обстоятельствами, связанными с пандемией коронавируса)
+            </p>
+            <p class="location__text">
+                Место проведения ЧТО 2081: пески — ледникового происхождения, принесённые туда водными потоками из-под отсупающих ледников около 500 000 лет назад. "Пустыня" площадью 12 квадратных километорв находится рядом с хутором Морозовский Верхнедоского района и ровноудалена от Воронежа, Ростова-на-Дону и Волгограда примерно на 400 километров.
+            </p>
+        </section>
+        <section class="slideshow">
+            S L I D E S H O W
+        </section>
+        <section class="tickets">
+            <p class="tickets__text">
+                Площадь пустыни будет разбита на несколько зон: стандартную и престижную "ложу". "Ложа" представляет из себя квадрат 500х500 метров в самом центре пересечения и сосредоточения звука. Другими словами "ложа" аналогична местам в театре, откуда лучше всего просматривается спектакль. Квадрат будет патрулироваться людьми, следящими за порядком и соблюдением тишины в этой зоне.
+            </p>
+            <p class="tickets__text">
+                Прошу обратить ваше внимание на то, что от количества проданных заранее билетов так же зависит: состоится ЧТО вовремя или нет. Если билеты не будут покупаться заведомо, ивент придётся либо перенести, либо отменить вовсе. Поэтому рекомендуется приобрести билеты предварително. Деньги можно вернуть во все дни, кроме дня мероприятия.
+            </p>
+            <p class="tickets__text">
+                <strong>Стоимость билетов:</strong>
+            </p>
+            <p class="tickets__text">
+                Стандартный билет — 1000р., в день мероприятия — 1300р..
+            </p>
+            <p class="tickets__text">
+                Билет в "ложу" — 2000р., в день мероприятия — 2500р. (количество билетов в этой зоне, так же как и места, строго ограничено).
+            </p>
+            <p class="tickets__text">
+                <strong>Купить:</strong> 
+                <a href="https://vk.com/pnstrt">https://vk.com/pnstrt</a> 
+                <a href="https://vk.com/app5745705_-180421187">https://vk.com/app5745705_-180421187</a>
+            </p>
+            <p class="tickets__text">
+                <strong>Купить физические билеты в Воронеже:</strong> 
+                <a href="https://vk.com/rebelheads">https://vk.com/rebelheads</a> 
+                <a href="https://vk.com/om_vrn">https://vk.com/om_vrn</a>
+            </p>
+            <p class="tickets__text">
+                <strong>Так же можно осуществить перевод на карту Сбербанка</strong> 4276130018490940 (при переводе обязателно указывайте свои ФИО и количество билетов).
+            </p>
+        </section>
+        <section class="transfer">
+            <p class="transfer__text">
+                К месту будет осуществляться трансфер на современных автобусах с кондиционерами и классными картинками по телевизору. В ваших же интересах забронировать и выкупить места заранее, чтобы эти автобусы не пришлось отменять. Если до опреедлённого момента осанется много свободных кресел, я дам отбой.
+            </p>
+            <p class="transfer__text">
+                Добираться своим ходом на рейсовых автобусах выйдет значительно сложнее и, возможно, дороже. На своём авто нужно добираться до хутора Морозовский Верхнедонского района.
+            </p>
+            <p class="transfer__text">
+                <strong>Стоимость проезда в оба конца:</strong> 1000р.
+            </p>
+            <p class="transfer__text">
+                <strong>Бронь мест в Воронеже:</strong> <a href="https://vk.com/topic-180421187_42928882">https://vk.com/topic-180421187_42928882</a>
+            </p>
+            <p class="transfer__text">
+                <strong>Бронь мест в Волгограде:</strong> <a href="https://vk.com/topic-180421187_42928722">https://vk.com/topic-180421187_42928722</a>
+            </p>
+            <p class="transfer__text">
+                <strong>Бронь мест в Ростове-на-Дону:</strong> <a href="https://vk.com/topic-180421187_42927456">https://vk.com/topic-180421187_42927456</a>
+            </p>
+            <p class="transfer__text">
+                <strong>Гостям из Москвы:</strong> <a href="https://vk.com/topic-180421187_42922866">https://vk.com/topic-180421187_42928882</a>
+            </p>
+            <p class="transfer__text">
+                <strong>Гостям из других городов:</strong> <a href="https://vk.com/topic-180421187_42922866">https://vk.com/topic-180421187_42922866</a>
+            </p>
+        </section>
+        <section class="rules">
+            <h2>На ЧТО действуют два основных правила — пунктуальность и тишина.</h2>
+            <div class="rule">
+                <img src="" alt="" class="rule__icon">
+                <p class="rule__text">
+                    Приезжайте к 18:00, лучше раньше. Тогда вы успеете найти метсо для вашей стоянки до темноты, поскольку пустыня не маленькая — 3х4 километра. И вы, и волонтеры будут счастливы. И ещё тогда вы точно насладитесь красотой заката. Солнце садится в 19:50.
+                </p>
+            </div>
+            <div class="rule">
+                <img src="" alt="" class="rule__icon">
+                <p class="rule__text">
+                    Санитарные зоны будут обозначены в картах местонсти, которые вы получите на входе в зону экспириенса.
+                </p>
+            </div>
+            <div class="rule">
+                <img src="" alt="" class="rule__icon">
+                <p class="rule__text">
+                    На территорию перфоманса рекомендуем взять с собой тёплые вещи (куртка, свитер, плед), пенки или складные стулья, средства зашиты от насекомых, фонарики. Еду и воду можно взять с собой или приобрести в зоне фудкорта. Пожалуйста, проявите ответственность за самих себя.
+                </p>
+            </div>
+            <div class="rule">
+                <img src="" alt="" class="rule__icon">
+                <p class="rule__text">
+                    В пустыне с рассветом очень быстро наступает жара, поэтому палатки лучше ставить в ближайшем лесу, примерно в 500-1000 метрах от основоной площадки.
+                </p>
+            </div>
+            <div class="rule">
+                <img src="" alt="" class="rule__icon">
+                <p class="rule__text">
+                    Очень важно после начала аудио-перфоманса не создавать лишнего шума. Для того, чтобы обсуждать насущные дела, у вас будет целое воскресенье. Любая болтовня или шуршание пакетами создадут напряжение у соседствующих слушателей, т.к. музыка не будет заглушать этих шумов. Не забывайте, что это не свадьба и не рок-концерт. Чтобы получить максимум удовольствия от действа, сосредоточьтесь на музыке и ведите себя кротко и аккуратно по отношению к окружающим. Располагайтесь дальше друг от друга (метров на 100), тогда шансы не слышать разговоры из других компаний увеличатся. Есил же вам будут настойчиво мешать, не стесняйтесь напомнить о правилах тишины или обратиться за помощью к организатору или волонтёрам. Кроме того, на территории проведения перфоманса будет работать патруль, который будет проверять билеты и обеспечивать спокойствие и комфорт всем участникам.
+                </p>
+            </div>
+            <div class="rule">
+                <img src="" alt="" class="rule__icon">
+                <p class="rule__text">
+                    Костры разводить нельзя!
+                </p>
+            </div>
+        </section>
+        <section class="merch">
+            <p class="merch__text">
+                Прямо сейчас и на самом ивенте можно приобрести футболки с репухами и "закосом под джой дивижн".
+            </p>
+            <p class="merch__text">
+                <strong>Цена:</strong> 1000р.
+            </p>
+            <p class="merch__text">
+                <strong>Магазин:</strong> <a href="https://vk.com/market-146434588">https://vk.com/market-146434588</a>
+            </p>
+        </section>
+    </main>
+    <footer>
+        <img src="./img/logo.svg" alt="Логотип Что" class="logo-footer">
+        <div class="contacts">
+            <p>Аникин Антон</p>
+            <p>[автор проекта]</p>
+            <p>razaa@mail.ru</p>
+            <p>89081303304</p>
+            <p>89092143119</p>
+        </div>
+        <ul>
+            <li>#chtoevent</li>
+            <li><a href="https://vk.com/chtoevent">vk.com/chtoevent</a></li>
+            <li><a href="https://instagram.com/chtoevent">instagram.com/chtoevent</a></li>
+            <li><a href="https://t.me/chtoevent">t.me/chtoevent</a></li>
+            <li><a href="https://facebook.com/chtoevent"></a>facebook.com/chtoevent</li>
+        </ul>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
