Change some corretions

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Chto 2020</title>
+    <title>ЧТО ' soundscape performance</title>
 </head>
 <body>
     <header>
         <nav class="navigation">
-            <img src="./img/logo.svg" alt="Логотип Что" class="navigation__logo">
             <ul class="sections">
+                <img src="./img/logo.svg" alt="Логотип Что" class="navigation__logo">
                 <li class="sections__item">Где и когда</li>
                 <li class="sections__item">Билеты</li>
                 <li class="sections__item">Трансфер</li>
@@ -38,7 +38,7 @@
             <p class="description__secondary-text">
                 Находясь в отдалении, слушатель воспринимает звук как огромную движущуюся масу вокруг него. Вся музыка на ЧТО демонстрируется через призму эмбиента. "Ambient" — с английского "окружающий". Я предлагаю посетителю окунуться в эту атмосферу, а не просто слушать её — оказаться в этом окружении, стать его частью. "ЧТО — это как будто ты начал слушать CD, а сам уже где-то на обложке, внутри звука. Портал без портала."
             </p>
-            <a href="#" class="description__info-link">
+            <a href="https://vk.com/@chtoevent-vecherinka-dlya-introvertov" target="_blank" class="description__info-link">
                 Подробнее о проекте
             </a>
         </section>
@@ -97,6 +97,7 @@
             <p class="tickets__text">
                 <strong>Так же можно осуществить перевод на карту Сбербанка</strong> 4276130018490940 (при переводе обязателно указывайте свои ФИО и количество билетов).
             </p>
+            <img src="./img/location.jpg" alt="Зоны расположения на карте">
         </section>
         <section class="transfer">
             <p class="transfer__text">
@@ -121,7 +122,7 @@
                 <strong>Гостям из Москвы:</strong> <a href="https://vk.com/topic-180421187_42922866">https://vk.com/topic-180421187_42928882</a>
             </p>
             <p class="transfer__text">
-                <strong>Гостям из других городов:</strong> <a href="https://vk.com/topic-180421187_42922866">https://vk.com/topic-180421187_42922866</a>
+                <strong>Гостям из других городов:</strong> обращаться к организаторам <a href="https://vk.com/chtoevent">https://vk.com/chtoevent</a>
             </p>
         </section>
         <section class="rules">
@@ -129,7 +130,7 @@
             <div class="rule">
                 <img src="" alt="" class="rule__icon">
                 <p class="rule__text">
-                    Приезжайте к 18:00, лучше раньше. Тогда вы успеете найти метсо для вашей стоянки до темноты, поскольку пустыня не маленькая — 3х4 километра. И вы, и волонтеры будут счастливы. И ещё тогда вы точно насладитесь красотой заката. Солнце садится в 19:50.
+                    Приезжайте к 18:00, лучше раньше. Тогда вы успеете найти метсо для вашей стоянки до темноты, поскольку пустыня не маленькая — 3х4 километра. И вы, и волонтеры будут счастливы. И ещё тогда вы точно насладитесь красотой заката. Солнце садится в 20:40.
                 </p>
             </div>
             <div class="rule">
