--- a/src/index.html
+++ b/src/index.html
@@ -8,35 +8,31 @@
     <title>ЧТО ' soundscape performance</title>
 </head>
 <body>
-    <header>
+    <header class="page-header">
         <nav class="navigation">
-            <ul class="sections">
-                <img src="./img/logo.svg" alt="Логотип Что" class="navigation__logo">
-                <li class="sections__item">Где и когда</li>
-                <li class="sections__item">Билеты</li>
-                <li class="sections__item">Трансфер</li>
-                <li class="sections__item">Правила</li>
-                <li class="sections__item">Мерч</li>
-                <li class="sections__item">Контакты</li>
-            </ul>
+            <img src="./img/logo.svg" alt="Логотип Что" class="navigation__logo">
+            <a href="#ref-description" class="navigation__item">Где и когда</a>
+            <a href="#ref-tickets" class="navigation__item">Билеты</a>
+            <a href="#ref-transfer" class="navigation__item">Трансфер</a>
+            <a href="#ref-rules" class="navigation__item">Правила</a>
+            <a href="#ref-merch" class="navigation__item">Мерч</a>
+            <a href="#ref-contacts" class="navigation__item">Контакты</a>
         </nav>
         <h1>Что . Soundscape performance</h1>
         <p>Вечеринка для интровертов с соблюдением социальной дистанции</p>
         <p>Ambient open air</p>
     </header>
-    <div class="hero">
-        <img src="./img/hero.jpg" alt="Фото пустыни" class="hero__image">
-    </div>
+    <img src="./img/hero.jpg" alt="Фото пустыни" class="hero-image">
     <main>
-        <section class="description">
-            <p class="description__main-text">
-                Что — это серия уникальных акустических мероприятий на стыке перформанса, саунд-арта, аудио-экспозиции, музыкального оупенэйра и туризма, проходящая на больших природных ландшафтах, где можно услышать переплетения эмбиента с музыкой эпохи ренессанса, индустриальных шумов с каноничными хоралами, дроуна с авангардом двадцатого века, различной экспериментальной, народной, академической и электронной музыкой.
+        <section class="description" id="ref-description">
+            <p class="description__text description__text_bold">
+                ЧТО — это серия уникальных акустических мероприятий на стыке перформанса, саунд-арта, аудио-экспозиции, музыкального оупенэйра и туризма, проходящая на больших природных ландшафтах, где можно услышать переплетения эмбиента с музыкой эпохи ренессанса, индустриальных шумов с каноничными хоралами, дроуна с авангардом двадцатого века, различной экспериментальной, народной, академической и электронной музыкой.
             </p>
-            <p class="description__secondary-text">
+            <p class="description__text">
                 Главным действующим элементом на ЧТО выступает пространство между источниками звука и слушателями: оно непривычно велико для музыкальных событий: 300-400 метров минимум и более километра в идеале. В нём музыка насыщается воздухом и приобретает новые качества, отличные от изначальных, становится буквально осязаема.
             </p>
-            <img src="./img/description__map.jpg" alt="Карта распространения звука" class="description__map">
-            <p class="description__secondary-text">
+            <img src="./img/sound.jpg" alt="Карта распространения звука" class="description__map">
+            <p class="description__text">
                 Находясь в отдалении, слушатель воспринимает звук как огромную движущуюся масу вокруг него. Вся музыка на ЧТО демонстрируется через призму эмбиента. "Ambient" — с английского "окружающий". Я предлагаю посетителю окунуться в эту атмосферу, а не просто слушать её — оказаться в этом окружении, стать его частью. "ЧТО — это как будто ты начал слушать CD, а сам уже где-то на обложке, внутри звука. Портал без портала."
             </p>
             <a href="https://vk.com/@chtoevent-vecherinka-dlya-introvertov" target="_blank" class="description__info-link">
@@ -51,7 +47,7 @@
                 Текст отзыва
             </p>
         </section>
-        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/t1J_xpBX-FI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/t1J_xpBX-FI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <section class="location">
             <p class="location__text">
                 <strong>Место:</strong> песчаная пустыня Большие Быковские Буруны. 49.879333, 41.420388.
@@ -69,7 +65,7 @@
         <section class="slideshow">
             S L I D E S H O W
         </section>
-        <section class="tickets">
+        <section class="tickets" id="ref-tickets">
             <p class="tickets__text">
                 Площадь пустыни будет разбита на несколько зон: стандартную и престижную "ложу". "Ложа" представляет из себя квадрат 500х500 метров в самом центре пересечения и сосредоточения звука. Другими словами "ложа" аналогична местам в театре, откуда лучше всего просматривается спектакль. Квадрат будет патрулироваться людьми, следящими за порядком и соблюдением тишины в этой зоне.
             </p>
@@ -98,9 +94,9 @@
             <p class="tickets__text">
                 <strong>Так же можно осуществить перевод на карту Сбербанка</strong> 4276130018490940 (при переводе обязателно указывайте свои ФИО и количество билетов).
             </p>
-            <img src="./img/location.jpg" alt="Зоны расположения на карте">
+            <img src="./img/location.jpg" alt="Зоны расположения на карте" class="tickets__map">
         </section>
-        <section class="transfer">
+        <section class="transfer" id="ref-transfer">
             <p class="transfer__text">
                 К месту будет осуществляться трансфер на современных автобусах с кондиционерами и классными картинками по телевизору. В ваших же интересах забронировать и выкупить места заранее, чтобы эти автобусы не пришлось отменять. Если до опреедлённого момента осанется много свободных кресел, я дам отбой.
             </p>
@@ -126,7 +122,7 @@
                 <strong>Гостям из других городов:</strong> обращаться к организаторам <a href="https://vk.com/chtoevent">https://vk.com/chtoevent</a>
             </p>
         </section>
-        <section class="rules">
+        <section class="rules" id="ref-rules">
             <h2>На ЧТО действуют два основных правила — пунктуальность и тишина.</h2>
             <div class="rule">
                 <img src="" alt="" class="rule__icon">
@@ -165,7 +161,7 @@
                 </p>
             </div>
         </section>
-        <section class="merch">
+        <section class="merch" id="ref-merch">
             <p class="merch__text">
                 Прямо сейчас и на самом ивенте можно приобрести футболки с репухами и "закосом под джой дивижн".
             </p>
@@ -179,7 +175,7 @@
     </main>
     <footer>
         <img src="./img/logo.svg" alt="Логотип Что" class="logo-footer">
-        <div class="contacts">
+        <div class="contacts" id="ref-contacts">
             <p>Аникин Антон</p>
             <p>[автор проекта]</p>
             <p>razaa@mail.ru</p>
@@ -191,7 +187,7 @@
             <li><a href="https://vk.com/chtoevent">vk.com/chtoevent</a></li>
             <li><a href="https://instagram.com/chtoevent">instagram.com/chtoevent</a></li>
             <li><a href="https://t.me/chtoevent">t.me/chtoevent</a></li>
-            <li><a href="https://facebook.com/chtoevent"></a>facebook.com/chtoevent</li>
+            <li><a href="https://facebook.com/chtoevent">facebook.com/chtoevent</a></li>
         </ul>
     </footer>
     <script src="script.js"></script>
