--- a/src/index.html
+++ b/src/index.html
@@ -101,97 +101,87 @@
             <img src="./img/tickets__map.jpg" alt="Зоны расположения на карте" class="tickets__map">
         </section>
         <section class="transfer" id="transfer">
-            <p class="transfer__text">
+            <p>
                 К месту будет осуществляться трансфер на современных автобусах с кондиционерами и классными картинками по телевизору. В ваших же интересах забронировать и выкупить места заранее, чтобы эти автобусы не пришлось отменять. Если до опреедлённого момента осанется много свободных кресел, я дам отбой.
             </p>
-            <p class="transfer__text">
+            <p>
                 Добираться своим ходом на рейсовых автобусах выйдет значительно сложнее и, возможно, дороже. На своём авто нужно добираться до хутора Морозовский Верхнедонского района.
             </p>
-            <p class="transfer__text">
+            <p class="transfer__text-spaced">
                 <strong>Стоимость проезда в оба конца:</strong> 1000р.
             </p>
-            <p class="transfer__text">
-                <strong>Бронь мест в Воронеже:</strong> <a href="https://vk.com/topic-180421187_42928882">https://vk.com/topic-180421187_42928882</a>
+            <p  class="transfer__text-spaced">
+                <strong>Бронь мест в Воронеже:</strong> <a target="_blank" href="https://vk.com/topic-180421187_42928882">https://vk.com/topic-180421187_42928882</a>
             </p>
-            <p class="transfer__text">
-                <strong>Бронь мест в Волгограде:</strong> <a href="https://vk.com/topic-180421187_42928722">https://vk.com/topic-180421187_42928722</a>
+            <p>
+                <strong>Бронь мест в Волгограде:</strong> <a target="_blank" href="https://vk.com/topic-180421187_42928722">https://vk.com/topic-180421187_42928722</a>
             </p>
-            <p class="transfer__text">
-                <strong>Бронь мест в Ростове-на-Дону:</strong> <a href="https://vk.com/topic-180421187_42927456">https://vk.com/topic-180421187_42927456</a>
+            <p>
+                <strong>Бронь мест в Ростове-на-Дону:</strong> <a target="_blank" href="https://vk.com/topic-180421187_42927456">https://vk.com/topic-180421187_42927456</a>
             </p>
-            <p class="transfer__text">
-                <strong>Гостям из Москвы:</strong> <a href="https://vk.com/topic-180421187_42922866">https://vk.com/topic-180421187_42928882</a>
+            <p>
+                <strong>Гостям из Москвы:</strong> <a target="_blank" href="https://vk.com/topic-180421187_42922866">https://vk.com/topic-180421187_42928882</a>
             </p>
-            <p class="transfer__text">
-                <strong>Гостям из других городов:</strong> обращаться к организаторам <a href="https://vk.com/chtoevent">https://vk.com/chtoevent</a>
+            <p>
+                <strong>Гостям из других городов:</strong> обращаться к организаторам <a target="_blank" href="https://vk.com/chtoevent">https://vk.com/chtoevent</a>
             </p>
         </section>
         <section class="rules" id="rules">
-            <h2>На ЧТО действуют два основных правила — пунктуальность и тишина.</h2>
-            <div class="rule">
-                <img src="" alt="" class="rule__icon">
-                <p class="rule__text">
-                    Приезжайте к 18:00, лучше раньше. Тогда вы успеете найти метсо для вашей стоянки до темноты, поскольку пустыня не маленькая — 3х4 километра. И вы, и волонтеры будут счастливы. И ещё тогда вы точно насладитесь красотой заката. Солнце садится в 20:40.
-                </p>
-            </div>
-            <div class="rule">
-                <img src="" alt="" class="rule__icon">
-                <p class="rule__text">
-                    Санитарные зоны будут обозначены в картах местонсти, которые вы получите на входе в зону экспириенса.
-                </p>
-            </div>
-            <div class="rule">
-                <img src="" alt="" class="rule__icon">
-                <p class="rule__text">
-                    На территорию перфоманса рекомендуем взять с собой тёплые вещи (куртка, свитер, плед), пенки или складные стулья, средства зашиты от насекомых, фонарики. Еду и воду можно взять с собой или приобрести в зоне фудкорта. Пожалуйста, проявите ответственность за самих себя.
-                </p>
-            </div>
-            <div class="rule">
-                <img src="" alt="" class="rule__icon">
-                <p class="rule__text">
-                    В пустыне с рассветом очень быстро наступает жара, поэтому палатки лучше ставить в ближайшем лесу, примерно в 500-1000 метрах от основоной площадки.
-                </p>
-            </div>
-            <div class="rule">
-                <img src="" alt="" class="rule__icon">
-                <p class="rule__text">
-                    Очень важно после начала аудио-перфоманса не создавать лишнего шума. Для того, чтобы обсуждать насущные дела, у вас будет целое воскресенье. Любая болтовня или шуршание пакетами создадут напряжение у соседствующих слушателей, т.к. музыка не будет заглушать этих шумов. Не забывайте, что это не свадьба и не рок-концерт. Чтобы получить максимум удовольствия от действа, сосредоточьтесь на музыке и ведите себя кротко и аккуратно по отношению к окружающим. Располагайтесь дальше друг от друга (метров на 100), тогда шансы не слышать разговоры из других компаний увеличатся. Есил же вам будут настойчиво мешать, не стесняйтесь напомнить о правилах тишины или обратиться за помощью к организатору или волонтёрам. Кроме того, на территории проведения перфоманса будет работать патруль, который будет проверять билеты и обеспечивать спокойствие и комфорт всем участникам.
-                </p>
-            </div>
-            <div class="rule">
-                <img src="" alt="" class="rule__icon">
-                <p class="rule__text">
-                    Костры разводить нельзя!
-                </p>
+            <h2 class="rules__heading">На ЧТО действуют два основных правила — пунктуальность и тишина.</h2>
+            <div class="rules-list">
+                <div>
+                    <p class="rule-time">
+                        Приезжайте к 18:00, лучше раньше. Тогда вы успеете найти метсо для вашей стоянки до темноты, поскольку пустыня не маленькая — 3х4 километра. И вы, и волонтеры будут счастливы. И ещё тогда вы точно насладитесь красотой заката. Солнце садится в 20:40.
+                    </p>
+                    <p class="rule-wc">
+                        Санитарные зоны будут обозначены в картах местонсти, которые вы получите на входе в зону экспириенса.
+                    </p>
+                </div>
+                <div>
+                    <p class="rule-equip">
+                        На территорию перфоманса рекомендуем взять с собой тёплые вещи (куртка, свитер, плед), пенки или складные стулья, средства зашиты от насекомых, фонарики. Еду и воду можно взять с собой или приобрести в зоне фудкорта. Пожалуйста, проявите ответственность за самих себя.
+                    </p>
+                    <p class="rule-hot">
+                        В пустыне с рассветом очень быстро наступает жара, поэтому палатки лучше ставить в ближайшем лесу, примерно в 500-1000 метрах от основоной площадки.
+                    </p>
+                    <p class="rule-fire">
+                        Костры разводить нельзя!
+                    </p>
+                </div>
+                <div>
+                    <p class="rule-silence">
+                        Очень важно после начала аудио-перфоманса не создавать лишнего шума. Для того, чтобы обсуждать насущные дела, у вас будет целое воскресенье. Любая болтовня или шуршание пакетами создадут напряжение у соседствующих слушателей, т.к. музыка не будет заглушать этих шумов. Не забывайте, что это не свадьба и не рок-концерт. Чтобы получить максимум удовольствия от действа, сосредоточьтесь на музыке и ведите себя кротко и аккуратно по отношению к окружающим. Располагайтесь дальше друг от друга (метров на 100), тогда шансы не слышать разговоры из других компаний увеличатся. Есил же вам будут настойчиво мешать, не стесняйтесь напомнить о правилах тишины или обратиться за помощью к организатору или волонтёрам. Кроме того, на территории проведения перфоманса будет работать патруль, который будет проверять билеты и обеспечивать спокойствие и комфорт всем участникам.
+                    </p>
+                </div>
             </div>
         </section>
         <section class="merch" id="merch">
-            <p class="merch__text">
+            <p>
                 Прямо сейчас и на самом ивенте можно приобрести футболки с репухами и "закосом под джой дивижн".
             </p>
-            <p class="merch__text">
+            <p>
                 <strong>Цена:</strong> 1000р.
             </p>
-            <p class="merch__text">
-                <strong>Магазин:</strong> <a href="https://vk.com/market-146434588">https://vk.com/market-146434588</a>
+            <p>
+                <strong>Магазин:</strong> <a target="_blank" href="https://vk.com/market-146434588">https://vk.com/market-146434588</a>
             </p>
         </section>
     </main>
-    <footer>
-        <img src="./img/logo.svg" alt="Логотип Что" class="logo-footer">
+    <footer class="page-footer">
+        <img src="./img/logo.svg" alt="Логотип Что" class="page-footer__logo">
         <div class="contacts" id="contacts">
             <p>Аникин Антон</p>
             <p>[автор проекта]</p>
             <p>razaa@mail.ru</p>
-            <p>89081303304</p>
-            <p>89092143119</p>
+            <p>+79081303304</p>
+            <p>+79092143119</p>
         </div>
         <ul>
             <li>#chtoevent</li>
-            <li><a href="https://vk.com/chtoevent">vk.com/chtoevent</a></li>
-            <li><a href="https://instagram.com/chtoevent">instagram.com/chtoevent</a></li>
-            <li><a href="https://t.me/chtoevent">t.me/chtoevent</a></li>
-            <li><a href="https://facebook.com/chtoevent">facebook.com/chtoevent</a></li>
+            <li><a target="_blank" href="https://vk.com/chtoevent">vk.com/chtoevent</a></li>
+            <li><a target="_blank" href="https://instagram.com/chtoevent">instagram.com/chtoevent</a></li>
+            <li><a target="_blank" href="https://t.me/chtoevent">t.me/chtoevent</a></li>
+            <li><a target="_blank" href="https://facebook.com/chtoevent">facebook.com/chtoevent</a></li>
         </ul>
     </footer>
     <script src="script.js"></script>
