Add merch images

--- a/src/index.html
+++ b/src/index.html
@@ -165,6 +165,12 @@
             <p>
                 <strong>Магазин:</strong> <a target="_blank" href="https://vk.com/market-146434588">https://vk.com/market-146434588</a>
             </p>
+            <div class="merch-list">
+                <img src="img/merch/merch_1.png" alt="Майка"  class="merch-list__item">
+                <img src="img/merch/merch_2.png" alt="Майка" class="merch-list__item">
+                <img src="img/merch/merch_3.png" alt="Майка" class="merch-list__item">
+                <img src="img/merch/merch_4.png" alt="Майка" class="merch-list__item">
+            </div>
         </section>
     </main>
     <footer class="page-footer">
